--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ExchangeRate API</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1 class="title"><img class="exchange-rate" src="https://app.exchangerate-api.com/img/logo-medium-invert.png"></h1>
+    <form>
+      <label for="exchange"></label>
+      <input class="form-control" id="exchange" type="text" name="exchange" placeholder="">
+      <button type="submit" class="btn btn-success" id="conversion">Search</button>
+    </form>
+    <p id="showConversion"></p>
+  </div>
 </body>
 </html>
