Correct error handling

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <div class="container">
     <h1 class="title"><img class="exchange-rate" src="https://app.exchangerate-api.com/img/logo-medium-invert.png"></h1>
     <form>
-      <label for="exchange"></label>
-      <input class="form-control" id="exchange" type="text" name="exchange" placeholder="">
+      <label for="amount"></label>
+      <input class="form-control" id="amount" type="text" name="amount" placeholder="">
       <button type="submit" class="btn btn-success" id="conversion">Search</button>
     </form>
     <p id="showConversion"></p>
