Add custom parameter for target query

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <form>
       <label for="amount"></label>
       <input class="form-control" id="amount" type="text" name="amount" placeholder="">
+      <label for="compare"></label>
+      <input class="form-control" id="compare" type="text" name="compare">
       <button type="submit" class="btn btn-success" id="conversion">Search</button>
     </form>
     <p id="showConversion"></p>
