Correct error handling, add utility function

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <form>
       <label for="amount"></label>
       <input class="form-control" id="amount" type="text" name="amount" placeholder="">
-      <label for="compare"></label>
-      <input class="form-control" id="compare" type="text" name="compare">
+      <label for="usd"></label>
+      <input class="form-control" id="usd" type="text" name="usd">
+      <label for="foreigncurrency"></label>
+      <input class="form-control" id="foreigncurrency" type="text" name="foreigncurrency">
       <button type="submit" class="btn btn-success" id="conversion">Search</button>
     </form>
     <p id="showConversion"></p>
