Add input value USD

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       <label for="amount"></label>
       <input class="form-control" id="amount" type="text" name="amount" placeholder="">
       <label for="usd"></label>
-      <input class="form-control" id="usd" type="text" name="usd">
+      <input class="form-control" id="usd" type="text" name="usd" value="USD">
       <label for="foreigncurrency"></label>
       <input class="form-control" id="foreigncurrency" type="text" name="foreigncurrency">
       <button type="submit" class="btn btn-success" id="conversion">Search</button>
