--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <input class="form-control" id="usd" type="text" name="usd" value="USD" readonly>
       <label for="foreigncurrency"></label>
       <input class="form-control" id="foreigncurrency" type="text" name="foreigncurrency">
-      <button type="submit" class="btn btn-success" id="conversion">Search</button>
+      <button type="submit" class="btn btn-success" id="conversion">Convert</button>
     </form>
     <p id="showConversion"></p>
   </div>
